scrollbar bug fixed

--- a/src/Components/Leaves/Leaves.css
+++ b/src/Components/Leaves/Leaves.css
@@ -13,6 +13,10 @@
   padding: 1.3rem;
 }
 
+#leavesInner::-webkit-scrollbar {
+  display: none;
+}
+
 .h-100 {
   height: 100%;
 }
